--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Jhonathan</title>
 </head>
 <body>
-    <h1>Oii  Jhonathan Teixeira Lima</h1>
+    <h1>Oii -- Jhonathan Teixeira Lima</h1>
 </body>
 </html>
