Organização com comentários

--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Jhonathan</title>
+
+    <link rel="stylesheet" href="estilos/reset.css">
+    <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
-    <h1>Oii -- Jhonathan Teixeira Lima</h1>
+    <header></header> <!--Topo-->
+    <main></main> <!--Conteúdo-->
+    <footer></footer> <!--Rodapé-->
 </body>
 </html>
