--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
-    <header></header> <!--Topo-->
+    <header>
+        <h1>Alura Books</h1>
+    </header> <!--Topo-->
     <main></main> <!--Conteúdo-->
     <footer></footer> <!--Rodapé-->
 </body>
