--- a/index.html
+++ b/index.html
@@ -48,11 +48,16 @@
             <a href="#"><img src="imagens/Usuário.svg" alt="Meu perfil" class="container__imagem"></a>
         </div>
     </header> <!--Topo-->
-    <section>
+    <!--<section class="banner">
         <h2 class="banner__titulo">Já sabe por onde começar?</h2>
         <p class="banner__texto">Encontre em nossa estante o que precisa para seu desenvolvimento!</p>
         <input type="search" class="banner__pesquisa" placeholder="Qual será sua próxima leitura?">
-    </section> <!--Banner-->
+    </section> <--Banner-->
+    <section class="banner">
+        <h2 class="banner__titulo">Já sabe por onde começar?</h2>
+        <p class="banner__texto">Encontre em nossa estante o que precisa para seu desenvolvimento!</p>
+        <input type="search" class="banner__pesquisa" placeholder="Qual será sua próxima leitura?">
+    </section>
     <main></main> <!--Conteúdo-->
     <footer></footer> <!--Rodapé-->
 </body>
