--- a/index.html
+++ b/index.html
@@ -93,5 +93,11 @@
     <main></main> <!--Conteúdo-->
     <footer></footer> <!--Rodapé-->
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+    <script>
+        const swiper = new Swiper('.swiper', {
+            spaceBetween: 10,
+            slidesPerView: 3,
+        });
+    </script>
 </body>
 </html>
