--- a/index.html
+++ b/index.html
@@ -63,19 +63,19 @@
         <div class="swiper-wrapper">
             <!-- Slides -->
             <div class="swiper-slide">
-                <img src="imagens/ApacheKafka.png" alt="Livro">
+                <img src="imagens/ApacheKafka.svg" alt="Livro">
             </div>
             <div class="swiper-slide">
-                <img src="imagens/Guia Front-end.png" alt="Livros">
+                <img src="imagens/Guia Front-end.svg" alt="Livros">
             </div>
             <div class="swiper-slide">
-                <img src="imagens/Javascript.png" alt="Livros">
+                <img src="imagens/Javascript.svg" alt="Livros">
             </div>
             <div class="swiper-slide">
-                <img src="imagens/Liderança.png" alt="Livros">
+                <img src="imagens/Liderança.svg" alt="Livros">
             </div>
             <div class="swiper-slide">
-                <img src="imagens/Portugol.png" alt="Livros">
+                <img src="imagens/Portugol.svg" alt="Livros">
             </div>
         </div>
         <!-- If we need pagination -->
